--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@handlebars/allow-prototype-access": "^1.0.5",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
@@ -32,12 +33,14 @@
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.0.4",
     "mongoose-paginate-v2": "^1.8.0",
+    "nodemailer": "^6.9.10",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.4",
-    "sweetalert2": "^11.10.3"
+    "sweetalert2": "^11.10.3",
+    "twilio": "^4.23.0"
   }
 }
